[package]
name = "dark-bonds"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dark_bonds"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
jupiter-cpi = "4.0.3"
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
solana-program = "^1.13.5"
switchboard-v2 = "0.1.23"

