[package]
name = "dark-bonds"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dark_bonds"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
mpl-token-metadata = "3.0.1"
anchor-spl = "0.28.0"
spl-math = {version = "0.1", features = ["no-entrypoint"]}
spl-token = {version = "3.5.0", default-features = false, features = ["no-entrypoint"]}
anchor-lang = {version = "0.28.0", features = ["init-if-needed"]}
solana-program = "^1.16.0"
switchboard-v2 = "0.4.0"
bytemuck = "1.13.1"

